# cn-address-normalizer

./: .github\workflows\release.yml  README.md  address_standardizer.py  pyproject.toml  setup.py
.github/workflows/: release.yml
address_standardizer/: __init__.py  base.py  builder.py  engine.py  storage.py  utils.py
tests/: test_basic.py  test_integration.py
